# mittab-deploy

./: .codeclimate.yml  .env  .env.example  .env.sample  .gitignore  Dockerfile.celery  Dockerfile.celery_beat  Dockerfile.flower  Dockerfile.nginx  Dockerfile.web  Pipfile  README.md  alembic.ini  app.py  app.yaml  celery_worker.py  celerybeat-schedule  codeship-services.yml  codeship-steps.yml  config.py  create_db.py  docker-compose.yml  droplet.tf  final-backup.json  hello.py  init-letsencrypt.sh  models.py  nginx.conf  provider.tf  pyproject.toml  requirements.txt  terraform.tfstate  terraform.tfstate.backup  wsgi.py
.do/: app.yaml
.github/workflows/: dockerimage.yml
app/: app.py  models.py  tasks.py
config/: base.py  repo_options.json  repo_options.py
data/nginx/: nginx.conf
deployer/: __init__.py  app.py  cli.py  config.py  extensions.py  forms.py  helpers.py  logging.py  models.py  tasks.py  views.py
deployer/clients/: digital_ocean.py  dnsimple.py  email.py  github.py  github_bot.py  paypal.py  remote_server.py  stripe.py
deployer/templates/: base.html  confirm.html  extend.html  index.html  new.html  show.html
deployer/templates/admin/: index.html  show.html
deployer/templates/mail/: confirmation.html  confirmation.txt  warning.html  warning.txt
deployer/views/: __init__.py  admin.py  public.py
migrations/: alembic.ini  env.py
migrations/versions/: 06fafc461a05_.py  0f771c963caf_add_email_sent_flag.py  2ab67e7a2a3b_.py  2bf32bd5be0c_initialize.py  2d07e4a2d226_add_confirmed_flag.py  5ab1f9b9fbfe_.py  676b236c57b0_.py  7039ec6b9c23_.py  7496b85d3049_.py  7796abf5a85a_.py  855dac18ad74_deletion_date_field_with_default.py  b39241731c0f_.py  d8263aebdb52_.py  e3401e85ab93_.py  e9d334937ec4_add_email.py
mittab_deploy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
