[project]
name = "mittab-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = [
    "alembic>=1.14.0",
    "boto3==1.4.7",
    "celery[redis]==4.2",
    "email-validator>=2.2.0",
    "flask==0.12.3",
    "flask-bootstrap==3.3.7.1",
    "flask-login>=0.5.0",
    "flask-mail==0.9",
    "flask-migrate==2.0",
    "flask-sqlalchemy==2.1.0",
    "flask-wtf==0.14",
    "greenlet!=0.4.17",
    "gunicorn==19.7.1",
    "importlib-metadata==4.13.0",
    "itsdangerous==2.0.1",
    "jinja2==2.9",
    "markupsafe==2.0.1",
    "mysql-connector-python>=9.0.0",
    "mysqlclient>=2.2.6",
    "oauthlib>=3.2.2",
    "python-digitalocean==1.10",
    "raven==6.1.0",
    "requests>=2.32.3",
    "scp>=0.15.0",
    "sqlalchemy==1.3.17",
    "stripe==2.18",
    "tenacity==5.0.3",
    "tornado==4.2",
    "werkzeug==0.16",
    "wtforms==2.3.1",
]
