[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mittab-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = [
    "alembic>=1.14.0",
    "celery[redis]>=5.3.6",
    "email-validator>=2.2.0",
    "Flask>=2.2.5,<2.3.0",
    "flask-bootstrap4>=4.0.2",
    "Flask-Mail>=0.9.1",
    "Flask-Migrate>=4.0.5",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-WTF>=1.2.1",
    "flower>=2.0.1",
    "gunicorn>=21.2.0",
    "importlib-metadata>=7.0.1",
    "itsdangerous>=2.1.2",
    "Jinja2>=3.1.3",
    "MarkupSafe>=2.1.5",
    "mysql-connector-python>=9.0.0",
    "mysqlclient>=2.2.6",
    "oauthlib>=3.2.2",
    "raven>=6.10.0",
    "requests>=2.32.3",
    "SQLAlchemy>=2.0.25",
    "stripe>=7.12.0",
    "tenacity>=8.2.3",
    "Werkzeug>=3.0.1",
    "WTForms>=3.1.2",
]

[tool.setuptools]
packages = ["deployer", "migrations"]
